commit code ngay 04/10/2022